I fixed issues on small screens
I had some issues on very small screens I took care of
Everything looks good on screen size 280px apart from one elements I have to fix - announcements

--- a/css/scss/abstracts/_variables.scss
+++ b/css/scss/abstracts/_variables.scss
@@ -15,3 +15,4 @@ $brand-color: #582C77;
 $brand-color-purple-light: #92278F;
 $brand-color-pink: #E6007E;
 $color-gray: rgb(219, 217, 217);
+$color-gray-text: #6e6d6d;
