--- a/css/scss/partials/_base.scss
+++ b/css/scss/partials/_base.scss
@@ -3,9 +3,11 @@
 
 body {
   font-family: Helvetica Neue, Verdana, Georgia, 'Times New Roman', Times, serif;
+  font-size: 17px;
   margin-bottom: 50px;
   color: #0a3126;
   margin: 0;
+
 }
 
 a {
