--- a/css/scss/partials/_cards.scss
+++ b/css/scss/partials/_cards.scss
@@ -9,12 +9,15 @@
 .cards-bg-img {
     position: absolute;
     z-index: 0;
+    width: 100%;
+    max-width: 450px;
+    height: auto;
 }
 
 .cards-title {
     color: $brand-color;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 600;
     text-align: center;
     margin-bottom: 50px;
@@ -32,7 +35,7 @@
 }
 
 .card-container {
-    width: 340px;
+    max-width: 80%;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     z-index: 1;
     background-color: white;
@@ -40,6 +43,7 @@
     margin: 20px 0;
     @media only screen and (min-width: $break-l) {
         margin: 0 20px;
+        width: 340px;
 
     }
 }
@@ -71,12 +75,13 @@
 }
 
 .card-subtitle {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .card-text {
-    font-size: 15px;
+    font-size: 17px;
     padding-left: 20px;
+    color: $color-gray-text;
 }
 
 .card-text p::before {
