--- a/css/scss/partials/_header.scss
+++ b/css/scss/partials/_header.scss
@@ -5,7 +5,8 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  // align-items: left;
+  align-items: center;
+  padding: 10px;
   margin-bottom: 50px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   @media only screen and (min-width: $break-m) {
@@ -43,7 +44,7 @@ header {
 
 .header-item {
   color: $brand-color;
-  font-size: 17px;
+  font-size: 18px;
   @media only screen and (min-width: $break-m) {
 
   margin: 40px 20px;
