--- a/css/scss/partials/_hero-image.scss
+++ b/css/scss/partials/_hero-image.scss
@@ -10,8 +10,10 @@
     flex-direction: column;
     justify-content: space-evenly;
     margin-bottom: 100px;
+    padding: 30px;
     @media only screen and (min-width: $break-l) {
         flex-direction: row;
+        padding: 50px;
     }
 
 }
@@ -25,13 +27,25 @@
 
 .hero-title {
     color: $brand-color; 
-    font-family: Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40px;
 }
 
 .hero-image {
     margin-top: 50px;
     @media only screen and (min-width: $break-l) {
         margin: 30px;
+    }
+}
+
+.hero-image img {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    @media only screen and (min-width: $break-l) {
+        min-width: 400px;
+
+    
     }
 }
 
