--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body {
   font-family: Helvetica Neue, Verdana, Georgia, "Times New Roman", Times, serif;
+  font-size: 17px;
   margin-bottom: 50px;
   color: #0a3126;
   margin: 0;
@@ -25,6 +26,8 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  padding: 10px;
   margin-bottom: 50px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
@@ -67,7 +70,7 @@ header {
 
 .header-item {
   color: #582C77;
-  font-size: 17px;
+  font-size: 18px;
 }
 @media only screen and (min-width: 768px) {
   .header-item {
@@ -97,10 +100,12 @@ header {
   flex-direction: column;
   justify-content: space-evenly;
   margin-bottom: 100px;
+  padding: 30px;
 }
 @media only screen and (min-width: 992px) {
   .hero-image-container {
     flex-direction: row;
+    padding: 50px;
   }
 }
 
@@ -114,6 +119,7 @@ header {
 .hero-title {
   color: #582C77;
   font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 40px;
 }
 
 .hero-image {
@@ -122,6 +128,17 @@ header {
 @media only screen and (min-width: 992px) {
   .hero-image {
     margin: 30px;
+  }
+}
+
+.hero-image img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+}
+@media only screen and (min-width: 992px) {
+  .hero-image img {
+    min-width: 400px;
   }
 }
 
@@ -146,12 +163,15 @@ header {
 .cards-bg-img {
   position: absolute;
   z-index: 0;
+  width: 100%;
+  max-width: 450px;
+  height: auto;
 }
 
 .cards-title {
   color: #582C77;
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 600;
   text-align: center;
   margin-bottom: 50px;
@@ -171,7 +191,7 @@ header {
 }
 
 .card-container {
-  width: 340px;
+  max-width: 80%;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   z-index: 1;
   background-color: white;
@@ -181,6 +201,7 @@ header {
 @media only screen and (min-width: 992px) {
   .card-container {
     margin: 0 20px;
+    width: 340px;
   }
 }
 
@@ -211,12 +232,13 @@ header {
 }
 
 .card-subtitle {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .card-text {
-  font-size: 15px;
+  font-size: 17px;
   padding-left: 20px;
+  color: #6e6d6d;
 }
 
 .card-text p::before {
@@ -313,7 +335,6 @@ span {
 }
 
 .help-cards-container {
-  border: 1px red solid;
   margin-bottom: 100px;
 }
 
@@ -338,16 +359,16 @@ span {
 
 .help-card-container {
   box-shadow: rgba(0, 0, 0, 0.15) 6px 0px 23px 1px;
-  padding: 20px 20px 20px 50px;
+  padding: 20px 20px 50px 50px;
   position: relative;
-  min-width: 300px;
-  max-width: 300px;
+  max-width: 360px;
   margin: 20px;
-  height: 200px;
+  height: auto;
 }
 @media only screen and (min-width: 992px) {
   .help-card-container {
     margin: 20px;
+    min-width: 360px;
   }
 }
 
@@ -392,8 +413,8 @@ span {
 
 .help-card-text {
   color: #504b4b;
-  font-size: 14px;
   line-height: 23px;
+  margin-bottom: 40px;
 }
 
 .view-more-btn {
@@ -401,6 +422,7 @@ span {
   color: #E6007E;
   font-weight: 600;
   font-size: 12px;
+  padding-bottom: 100px;
 }
 .view-more-btn::after {
   content: " ➜";
@@ -413,7 +435,7 @@ span {
 .announcements-container {
   border: 1px green solid;
   background-color: #582C77;
-  padding-bottom: 100px;
+  padding: 0 50px 100px;
 }
 
 .announcements-title {
@@ -440,9 +462,13 @@ span {
   background-color: white;
   margin: 20px 20px 20px 20px;
   padding: 30px 20px 60px 30px;
-  min-width: 350px;
-  max-width: 350px;
   position: relative;
+}
+@media only screen and (min-width: 992px) {
+  .announcement-container {
+    min-width: 350px;
+    max-width: 350px;
+  }
 }
 
 .announcement-date {
@@ -479,12 +505,17 @@ span {
 
 .footer-container {
   display: flex;
+  flex-direction: column;
+}
+@media only screen and (min-width: 576px) {
+  .footer-container {
+    flex-direction: row;
+  }
 }
 
 .footer-left-container {
   background-color: #E6007E;
   padding: 50px;
-  flex-basis: 70%;
 }
 
 .footer-links {
@@ -512,14 +543,16 @@ span {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  padding: 50px;
 }
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1260px) {
   .footer-right-container {
     flex-direction: row;
+    padding: 100px;
   }
 }
 
-.footer-right-container div {
+.footer-right-container a {
   margin: 20px;
 }
 
